# Jarvis_AI

./: .gitignore  .gitmodules  CELEBRATION.py  CEREBRO_INTEGRATION_GUIDE.md  CHANGELOG.md  CHAT_INTERFACE_EVOLUTION.md  COMMIT_SUMMARY.md  COMPLETED_WORK_SUMMARY.md  COMPLETE_CUSTOMIZATION_SUMMARY.md  COMPLETE_INTEGRATION_GUIDE.md  COMPLEX_NLP_MULTI_AGENT_ANALYSIS.md  CONFIGURATION_FIX_REPORT.md  CONTRIBUTING.md  CURRENT_MESSAGE_FLOW.md  CUSTOMIZATION_GUIDE.md  Dockerfile  FINAL_DEBUG_REPORT.md  HOW_TO_INTERACT.md  HOW_TO_USE_JARVIS_AI.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_PLAN.md  INTEGRATION_GUIDE.md  JARVIS_EVOLUTION_DEMO.py  LICENSE  MCP_CORE_AGENT_ANALYSIS.md  MODERN_ARCHITECTURE_SUCCESS.md  Modelfile.specialist  OPTIMIZATIONS.md  PHASE3_DEMO.py  PHASE3_SUCCESS.md  PHASE4_DEMO.py  PHASE4_IMPLEMENTATION.md  PHASE4_SUCCESS.py  PHASE5_IMPLEMENTATION.md  PLUGIN_ARCHITECTURE.md  PRE_MCP_CHECKLIST.md  PROJECT_ANALYSIS_GUIDE.md  README.md  README_Version2.md  SUCCESS_REPORT.md  (+108 more)
.github/: pull_request_template.md
Jarvis_Local/: __init__.py  active_model.cfg  agent.md  agent.py  config.py  evaluation.py  logger_config.py  main.py  orchestrator.py  requirements.txt  settings.py  setup_api_key.py
adaptivemind_core/: config.py
agent/: agent.md  core.py  doc_generator.py  github_integration.py  guardrails.py  jetbrains_integration.py  log_manager.py  note_integration.py  persona_manager.py  plugin_adapters.py  rag_handler.py  repo_context.py  security.py  tools.py  workflow_system.py
api_schemas/: adaptive_swarm_models.yaml  agent_models.yaml  chat_models.yaml  job_models.yaml  monitoring_models.yaml  openapi.yaml  security_models.yaml  workflow_models.yaml
app/: __init__.py  agent.md  auth.py  galaxy.py  knowledge_graph.py  llm_generator.py  main.py  main.py.backup  main_broken.py  test_harness.py
apps/: __init__.py
auth/: __init__.py  audit.py  password_reset.py  rate_limit.py  two_factor.py
benchmarks/: __init__.py  baseline_metrics.json  ctde_benchmark.py  harness.py  partial_observability.py  perf_gate.py  results.md
config/: .python-version  active_model.cfg  agent.md  audit_rules.yaml  config.example.yaml  config.yaml  config_loader.py  default.yaml  pytest.ini  secrets.py  security_standards.json
custom_workflows/: agent.md  workflow_templates.py
database/: __init__.py  analytics_functions.py  database.py
demo/: README.md  agent.md  index.html
development/: demo_reliability.py  requirements.txt
docs/: ADAPTIVEMIND_BRANDING.md  ADDITIONAL_CONSIDERATIONS.md  ADMIN_MODEL_MANAGEMENT.md  API_CONTRACTS_README.md  API_V1.md  BACKUP_RESTORE.md  BRANCHING_STRATEGY.md  BUDGET_IP_PROTECTION.md  CLOUD_FIRST_SETUP.md  CRITIC_BEST_PRACTICES.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION_PROGRESS.md  GITHUB_REPOSITORY_UPDATES.md  LEGACY.md  LOCAL_ASSISTANT.md  MIGRATION_GUIDE.md  PLUGIN_DEVELOPMENT_GUIDE.md  PROFESSIONAL_ROADMAP.md  README.md  REBRANDING_RESEARCH.md  REBRANDING_STRATEGY.md  SCOPED_LOGS_RAG_HITL_ROUTING.md  SDK_PYTHON.md  UNIFIED_ARCHITECTURE.md  V2_MIGRATION_GUIDE.md  agent.md  api_contracts_task_progress.md  architecture.md  build-a-specialist.md  feature-3-todo.md  graph-ui.md  index.html  memory.md  migration_checklist.md  operations.md  pruning-and-path-memory.md  run-jarvis-in-5-minutes.md  todo_documentation_improvement.md  tool_docs.json  ui_features.md  (+2 more)
examples/: code_review.ipynb  code_review.py  deep_research.ipynb  deep_research.py  pruning_demo.ipynb  pruning_demo.py
integrations/: __init__.py  api_integration.py  custom_tools.py  database_integration.py
jarvis/: __init__.py  __main__.py  agent.md
jarvis_ai/: __init__.py  agent.md  cli.py  setup.py
jarvis_core/: __init__.py  app.py  config.py  logger.py  logging.py  minimal_server.py  server.py  server_enhanced.py  server_fixed.py  server_simple.py
jarvis_sdk/: README.md  __init__.py  pyproject.toml  registry.py  scaffold.py
legacy/: __init__.py  analytics_tracker.py  app.py  create_admin.py  ide_launch.sh  launch.sh  requirements_enhanced.txt  setup_enhanced.py  test_extensibility_framework.py
logs/: events.ndjson
memory_service/: __init__.py  agent.md  client.py  config.py  hypergraph.py  models.py  project_memory.py  vector_store.py
plugins/: project_management_plugin.py
policies/: safety.yaml
postman/: AdaptiveMind_API_v1.postman_collection.json  Jarvis_API_v1.postman_collection.json
project_gi_c22f29/: agent.md
project_hi_63e44e/: agent.md
project_hi_c154ab/: agent.md
project_hi_execute_a_rsearch_baf03b/: agent.md
project_hi_f0a72b/: agent.md
results/: README.md
schemas/: event.json
scripts/: __init__.py  add_copyright_headers.py  agent.md  bcrypt_admin.py  build_ui.sh  create_admin.py  create_admin_user.py  create_branch.py  dependency_scan.py  dev-start.sh  doctor.py  generate_lock.sh  generate_tool_docs.py  migrate_user_memory.py  quick_admin.py  rag_handler.py  rebrand_to_adaptivemind.py  redis.py  service-manager.sh  start_server.py  start_v2_backend.py  system_monitor.py  test_v2_integration.py  update_copyright_info.py  validate_deployment.sh  validate_lang_integration.py  yaml.py
sentence_transformers/: __init__.py
shared_orchestrator_bus/: agent.md
src-tauri/: .eslintignore  .eslintrc.cjs  Dockerfile  agent.md  index.html  jest.config.cjs  package-lock.json  package.json  tauri.conf.json
tests/: _test_server.py  agent-2.md  agent.md  comprehensive_api_test.py  conftest.py  final_demo.py  memory_acl_test.py  mock_logger_config.py  path_memory_test.py  run_contract_tests.py  simple_audit_test.py  simple_test.py  temp_test.py  test_adversary_pair_critics.py  test_agent_core.py  test_agent_recall.py  test_api.py  test_audit_system.py  test_auth.py  test_auth_endpoints.py  test_autotune.py  test_backend.py  test_bandwidth_channel.py  test_benchmark_harness.py  test_benchmark_metrics.py  test_black_team_context_isolation.py  test_black_team_orchestrator.py  test_branch_learning.py  test_cerebro_dashboard.py.disabled  test_child_orchestrator_logs.py  test_cli.py  test_code_generation_adapter.py  test_code_intelligence.py  test_crews.py  (+129 more)
(+515 files in other folders)
