[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-ai"
version = "2.0.0"
description = "Privacy-first modular AI development assistant with Lang ecosystem integration"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Jimmy De Jesus", email = "jimmy@jarvis-ai.dev"}
]
keywords = ["ai", "assistant", "langchain", "langgraph", "development"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core dependencies
    "requests==2.31.0",
    "pyyaml>=6.0",
    "cryptography>=40.0.0",
    "bcrypt>=4.0.0",
    "PyJWT>=2.0.0",
    "psutil>=5.9.0",
    "networkx>=3.0",
    "plotly>=5.14.0",
    "duckduckgo-search>=4.0.0",
    "pillow>=10.0.0",
    "structlog>=23.1.0",
    "graphviz>=0.20.1",
    "chromadb>=0.5.0",
    "python-dotenv>=1.0.0",
    "keyring>=24.0.0",
    "pyotp>=2.9.0",
    "redis>=5.0.0",
    "websockets==15.0.1",
    "bleach>=6.0.0",
    
    # Lang Family Tools for V2 Architecture
    "langchain",
    "langchain-core", 
    "langchain-community",
    "langgraph",
    "langsmith",
    
    # API Framework for V2 Backend
    # FastAPI 0.111.x is paired with Pydantic 2.7+
    "fastapi>=0.111,<0.112",
    "pydantic>=2.7,<3",
    "uvicorn>=0.22.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "python-jose>=3.3.0",
]

[project.optional-dependencies]
ui = [
    "streamlit>=1.32.0",
]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.4.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "fakeredis>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/jimmyjdejesus-cmyk/Jarvis_AI"
Documentation = "https://github.com/jimmyjdejesus-cmyk/Jarvis_AI/docs"
Repository = "https://github.com/jimmyjdejesus-cmyk/Jarvis_AI"
Issues = "https://github.com/jimmyjdejesus-cmyk/Jarvis_AI/issues"

[project.scripts]
jarvis = "jarvis_ai.cli:main"
jarvis-setup = "jarvis_ai.setup:main"

[tool.setuptools.packages.find]
where = ["."]
# Let setuptools discover packages automatically.
# This is more robust than maintaining a manual include list.
# include = ["jarvis_ai*", "jarvis*", "jarvis_sdk*", "legacy*"]
# exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
jarvis_ai = ["*.yaml", "*.yml", "*.json", "*.txt", "*.md"]
jarvis = ["plugins/manifest.json"]
legacy = ["**/*.yaml", "**/*.yml", "**/*.json", "**/*.txt"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
