[project]
name = "jarvis-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anyio>=4.11",
    "bcrypt>=4.0.1",
    "fastapi>=0.121",
    "httpx>=0.28",
    "numpy>=1.26.0",
    "psutil>=5.9",
    "pydantic>=2.12",
    "python-dotenv>=1.2",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "requests>=2.32",
    "starlette>=0.49",
    "uvicorn>=0.38",
    "agent-scaling-laws @ git+https://github.com/jimmyjdejesus-cmyk/agent-scaling-laws.git@v0.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "responses>=0.25.8",
    "websocket-client>=1.7",
    "websockets>=15.0.1",
    "jsonschema>=4.25.1",
]
