# Copyright (c) 2025 Jimmy De Jesus (Bravetto)
# Licensed under the Creative Commons Attribution 4.0 International (CC BY 4.0).
# See https://creativecommons.org/licenses/by/4.0/ for license terms.

[project]
name = "adaptivemind-core"
version = "0.1.0"
description = "Intelligent AI Routing & Context Engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anyio>=4.11",
    "bcrypt>=4.0.1",
    "fastapi>=0.121",
    "httpx>=0.28",
    "numpy>=1.26.0",
    "psutil>=5.9",
    "pydantic>=2.12",
    "python-dotenv>=1.2",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "requests>=2.32",
    "starlette>=0.49",
    "uvicorn>=0.38",
    "agent-scaling-laws @ git+https://github.com/jimmyjdejesus-cmyk/agent-scaling-laws.git@v0.1.0",
]

[dependency-groups]
dev = [
    # Testing
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1.0",
    "responses>=0.25.8",
    "websocket-client>=1.7",
    "websockets>=15.0.1",
    "jsonschema>=4.25.1",
    
    # Code Quality & Linting
    "ruff>=0.8.0",
    "mypy>=1.7.0",
    "bandit[toml]>=1.7.8",
    "pre-commit>=3.7.0",
    
    # Documentation
    "interrogate>=1.5.0",
    # Note: markdownlint-cli is an npm package, not Python
    
    # Complexity Analysis
    "radon>=6.0.1",
    "vulture>=2.7",
    
    # Security
    "safety>=3.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
extends = "ruff.toml"

[tool.mypy]
extends = "mypy.ini"

[tool.bandit]
extends = ".bandit"

[tool.coverage.run]
source = ["adaptivemind", "adaptivemind_core"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/conftest.py",
    "*/agent_scaling_laws/*",
    "*/scripts/*",
    "*/legacy/*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=adaptivemind",
    "--cov=adaptivemind_core", 
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "security: marks tests as security tests",
    "unit: marks tests as unit tests",
]
